# autopilot

./: .gitattributes  .gitignore  data-analysis.jl  ekf.jl  localNED-tests.py
fsw/: CMakeLists.txt  Datalogger.cpp  Datalogger.hpp  EKF.cpp  EKF.hpp  IMU.cpp  IMU.hpp  LoopRate.cpp  LoopRate.hpp  autopilot.cpp  config.txt  gps-test.cpp  nav-tests.cpp  parse-datalog.py  utils.cpp  utils.hpp
gsw/: ground-station.html
imu-dataset/: axial-hil.csv  axial.csv  datalog.csv  drive-up-incline.csv
